updates to search bar

--- a/index.html
+++ b/index.html
@@ -13,26 +13,55 @@
         </div>
         <hr>
 
+        <div class="row">
+            <div id="coffees" class="col-6">
+            </div>
 
-<div class="row">
-        <div id="coffees" class="col-6">
+            <div class="col-6">
+                <form>
+                    <label for="roast-selection">Roast Selection</label>
+                    <br>
+
+                    <select id="roast-selection">
+                        <!--<option selected>all</option>-->
+                        <option>light</option>
+                        <option>medium</option>
+                        <option>dark</option>
+                    </select>
+                    <br><br>
+
+                    <label for="coffee_name">Coffee Name</label>
+                    <br>
+
+                    <input type="text" id="coffee_name">
+                    <br><br>
+
+                    <input id="submit" type="submit" />
+                </form>
+                <hr>
+                <h3 class="py-2">Add a Coffee</h3>
+
+                <form class>
+                    <label for="roast-selection_2">Roast Selection</label>
+                    <br>
+
+                    <select id="roast-selection_2">
+                        <option>light</option>
+                        <option>medium</option>
+                        <option>dark</option>
+                    </select>
+                    <br><br>
+
+                    <label for="new_coffee_name">Coffee Name</label>
+                    <br>
+
+                    <input type="text" id="new_coffee_name">
+                    <br><br>
+
+                    <input id="submit" type="submit" />
+                </form>
+            </div>
         </div>
-
-
-        <form class="col-6">
-            <label for="roast-selection">Roast Selection</label>
-            <select id="roast-selection">
-                <option>light</option>
-                <option>medium</option>
-                <option>dark</option>
-            </select>
-
-            <label for="coffee_name">Coffee Name</label>
-            <input type="text" id="coffee_name">
-
-            <input id="submit" type="submit" />
-        </form>
-</div>
 
     </div>
 
