--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <input type="text" id="coffee_name">
                     <br><br>
 
-                    <input id="submit" type="submit" />
+                    <input id="submit" type="submit">
                 </form>
                 <hr>
                 <h3 class="py-2">Add a Coffee</h3>
@@ -58,7 +58,7 @@
                     <input type="text" id="new_coffee_name">
                     <br><br>
 
-                    <input id="submit" type="submit" />
+                    <input id="submit2" type="submit" />
                 </form>
             </div>
         </div>
