finished search feat/style

--- a/index.html
+++ b/index.html
@@ -22,21 +22,19 @@
                     <label for="roast-selection">Roast Selection</label>
                     <br>
 
-                    <select id="roast-selection">
+                    <select class="form-control" id="roast-selection">
                         <!--<option selected>all</option>-->
-                        <option>light</option>
-                        <option>medium</option>
-                        <option>dark</option>
+                        <option>Light</option>
+                        <option>Medium</option>
+                        <option>Dark</option>
                     </select>
-                    <br><br>
 
                     <label for="coffee_name">Coffee Name</label>
+
+                    <input class="form-control" type="text" id="coffee_name">
                     <br>
 
-                    <input type="text" id="coffee_name">
-                    <br><br>
-
-                    <input id="submit" type="submit">
+                    <input class="btn btn-outline-primary btn-block" id="submit" type="submit">
                 </form>
                 <hr>
                 <h3 class="py-2">Add a Coffee</h3>
@@ -45,20 +43,18 @@
                     <label for="roast-selection_2">Roast Selection</label>
                     <br>
 
-                    <select id="roast-selection_2">
-                        <option>light</option>
-                        <option>medium</option>
-                        <option>dark</option>
+                    <select class="form-control" id="roast-selection_2">
+                        <option>Light</option>
+                        <option>Medium</option>
+                        <option>Dark</option>
                     </select>
-                    <br><br>
 
                     <label for="new_coffee_name">Coffee Name</label>
+
+                    <input class="form-control" type="text" id="new_coffee_name">
                     <br>
 
-                    <input type="text" id="new_coffee_name">
-                    <br><br>
-
-                    <input id="submit2" type="submit" />
+                    <input class="btn btn-outline-primary btn-block" id="submit2" type="submit" />
                 </form>
             </div>
         </div>
