--- a/index.html
+++ b/index.html
@@ -7,62 +7,58 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body>
+<!-- Main Container -->
     <div class="container-fluid">
-
-
+        <!-- Page Header -->
         <div class="row">
             <h1 class="mx-auto">Coffee!</h1>
         </div>
         <hr>
-
         <!--Row everything is in-->
         <div class="row">
-
+            <!-- Column containing coffees -->
             <div id="coffees" class="col-6">
             </div>
-
+            <!-- Column containing both Search/Add Coffee Forms -->
             <div class="col-6">
+                <!-- Top search form (start)-->
                 <form>
                     <label for="roast-selection">Roast Selection</label>
                     <br>
-
+                    <!-- Roast Selection dropdown options -->
                     <select class="form-control" id="roast-selection">
                         <!--<option selected>all</option>-->
                         <option>light</option>
                         <option>medium</option>
                         <option>dark</option>
                     </select>
-
                     <label for="coffee_name">Coffee Name</label>
-
                     <input class="form-control" type="text" id="coffee_name">
                     <br>
-
+                    <!-- search coffee submit button-->
                     <input class="btn btn-outline-primary btn-block" type="submit">
                 </form>
                 <hr>
+                <!--Add a Coffee form (start) -->
                 <h3 class="py-2">Add a Coffee</h3>
-
                 <form class>
                     <label for="new_roast">Roast Selection</label>
                     <br>
-
+                    <!-- Roast selection dropdown options for adding new coffee -->
                     <select class="form-control" id="new_roast">
                         <option>light</option>
                         <option>medium</option>
                         <option>dark</option>
                     </select>
-
+                    <!-- Adding New Coffee name -->
                     <label for="new_coffee_name">Coffee Name</label>
-
                     <input class="form-control" type="text" id="new_coffee_name">
                     <br>
-
+                    <!-- New Coffee submit button-->
                     <input class="btn btn-outline-primary btn-block" id="add_coffee" type="button" value="Submit"/>
                 </form>
             </div>
         </div>
-
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
