styled mobile version

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
 
 <!-- Main Container -->
-    <div class="container-fluid">
+    <div class="container-fluid pb-5">
         <!-- Page Header -->
         <div class="row">
             <h2 class="mx-auto">Find your dream brew, or create your own:</h2>
@@ -58,7 +58,7 @@
                     <br>
                     <!-- Roast Selection dropdown options -->
                     <select class="form-control" id="roast-selection">
-                        <!--<option selected>all</option>-->
+                        <option selected>all</option>
                         <option>light</option>
                         <option>medium</option>
                         <option>dark</option>
@@ -67,7 +67,7 @@
                     <input class="form-control" type="text" id="coffee_name">
                     <br>
                     <!-- search coffee submit button-->
-                    <input class="btn btn-outline-primary btn-block" type="submit">
+                    <input class="btn btn-outline-primary btn-block" type="button" value="Search">
                 </form>
                 <hr>
                 <!--Add a Coffee form (start) -->
@@ -86,7 +86,7 @@
                     <input class="form-control" type="text" id="new_coffee_name">
                     <br>
                     <!-- New Coffee submit button-->
-                    <input class="btn btn-outline-primary btn-block" id="add_coffee" type="button" value="Submit"/>
+                    <input class="btn btn-outline-primary btn-block" id="add_coffee" type="button" value="Add Coffee"/>
                 </form>
             </div>
         </div>
