--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <!-- Jumbotron -->
     <div class="jumbotron jumbotron-fluid mb-0">
-        <div class="container">
+        <div class="heading-bg-container px-4">
             <h1 class="display-4">C+M Coffee Inc.</h1>
             <p class="lead">"Best cup of joe this side of the Mississippi."<br><em>-Times Magazine</em></p>
         </div>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,7 +33,7 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Zip Code" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
     </nav>
@@ -42,16 +42,16 @@
     <div class="container-fluid pb-5">
         <!-- Page Header -->
         <div class="row">
-            <h2 class="mx-auto">Find your dream brew, or create your own:</h2>
+            <h2 class="mx-auto mt-4">Find your dream brew, or create your own:</h2>
         </div>
         <hr>
         <!--Row everything is in-->
         <div class="row">
             <!-- Column containing coffees -->
-            <div id="coffees" class="col-6">
+            <div id="coffees" class="col-6 mt-3">
             </div>
             <!-- Column containing both Search/Add Coffee Forms -->
-            <div class="col-6">
+            <div class="col-6 mt-3">
                 <!-- Top search form (start)-->
                 <form>
                     <label for="roast-selection">Roast Selection</label>
