--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <!--Row everything is in-->
         <div class="row">
             <!-- Column containing coffees -->
-            <div id="coffees" class="col-6 mt-3">
+            <div id="coffees" class="col-12 col-sm-6 mt-3">
             </div>
             <!-- Column containing both Search/Add Coffee Forms -->
-            <div class="col-6 mt-3">
+            <div class="col-12 col-sm-6 mt-3">
                 <!-- Top search form (start)-->
                 <form>
                     <label for="roast-selection">Roast Selection</label>
