--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="jumbotron jumbotron-fluid mb-0">
         <div class="heading-bg-container px-4">
             <h1 class="display-4">C+M Coffee Inc.</h1>
-            <p class="lead">"Best cup of joe this side of the Mississippi."<br><em>-Times Magazine</em></p>
+            <p class="lead">"Best cup of joe this side of the Mississippi."<br><em>-Time Magazine</em></p>
         </div>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
